// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple mouse - continuous horizontal wheel Mac Chrome 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -881.3275146484375,
          0,
          0,
        ],
        "axisVelocity": Array [
          -1.9548461698762425,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -226.881103515625,
          "deltaY": 0,
          "timeStamp": 4498.224999995728,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        8,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -881.3275146484375,
          0,
          0,
        ],
        "axisVelocity": Array [
          -1.9548461698762425,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -226.881103515625,
          "deltaY": 0,
          "timeStamp": 4498.224999995728,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        8,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`simple mouse - continuous horizontal wheel Mac FF 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -468,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.8977556109725686,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 1,
          "deltaX": -6,
          "deltaY": 0,
          "timeStamp": 3668,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        8,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -468,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.8977556109725686,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 1,
          "deltaX": -6,
          "deltaY": 0,
          "timeStamp": 3668,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        8,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`simple mouse - continuous horizontal wheel Mac Safari 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -829.88525390625,
          0,
          0,
        ],
        "axisVelocity": Array [
          -1.9534027099609375,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -175.9234619140625,
          "deltaY": 0,
          "timeStamp": 4044.0000000000005,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        8,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -829.88525390625,
          0,
          0,
        ],
        "axisVelocity": Array [
          -1.9534027099609375,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -175.9234619140625,
          "deltaY": 0,
          "timeStamp": 4044.0000000000005,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        8,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`simple mouse - continuous horizontal wheel Windows Chrome 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -900,
          0,
          0,
        ],
        "axisVelocity": Array [
          -1.4989881830374567,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -150,
          "deltaY": 0,
          "timeStamp": 2919.8799999430776,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        5,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -900,
          0,
          0,
        ],
        "axisVelocity": Array [
          -1.4989881830374567,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -150,
          "deltaY": 0,
          "timeStamp": 2919.8799999430776,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        5,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`simple mouse - continuous horizontal wheel Windows Edge 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -2342.5501708984375,
          0,
          0,
        ],
        "axisVelocity": Array [
          -3.282129479414435,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -334.6500244140625,
          "deltaY": 0,
          "timeStamp": 3153.7650000536814,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        6,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -2342.5501708984375,
          0,
          0,
        ],
        "axisVelocity": Array [
          -3.282129479414435,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -334.6500244140625,
          "deltaY": 0,
          "timeStamp": 3153.7650000536814,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        6,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`simple mouse - continuous horizontal wheel Windows FF 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -54,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.135,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 1,
          "deltaX": -3,
          "deltaY": 0,
          "timeStamp": 2428,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        0,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -54,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.135,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 1,
          "deltaX": -3,
          "deltaY": 0,
          "timeStamp": 2428,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        0,
      ],
      "wheelType": "ANY_WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1296,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.5524296675191815,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 1,
          "deltaX": -3,
          "deltaY": 0,
          "timeStamp": 5131,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        1,
        24,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1296,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.5524296675191815,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 1,
          "deltaX": -3,
          "deltaY": 0,
          "timeStamp": 5131,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        1,
        24,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;
